--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -230,6 +230,14 @@ h2 {
     border: 1px solid #dddddd;
 }
 
+.separated-div {
+    background-color: #000000;
+    border: 1px solid #444;
+    border-radius: 10px; /* Rounded corners */
+    margin-bottom: 20px; /* Margin to create separation from the next div */
+    padding: 10px;
+}
+
 .unobtrusive {
     width: 0;
     height: 0;
