Fix bugs to deduct source quantity.

--- a/app/templates/session/username.html
+++ b/app/templates/session/username.html
@@ -15,7 +15,7 @@
     then it's best to avoid giving personal information.</p>
     <form method="POST" action="{{ url_for('set_username') }}">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
+        <input type="text" id="username" name="username" required autofocus>
         <button type="submit">Submit</button>
     </form>
 </body>
